--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@angular/platform-browser-dynamic": "^13.2.6",
     "@angular/router": "^13.2.6",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
-    "@popperjs/core": "^2.11.4",
     "@ngui/map": "0.30.3",
+    "@popperjs/core": "^2.11.4",
     "@types/googlemaps": "3.39.14",
     "arrive": "2.4.1",
-    "bootstrap": "4.5.2",
+    "bootstrap": "^5.2.0",
     "bootstrap-notify": "3.1.3",
     "chart.js": "2.9.4",
     "chartist": "0.11.4",
