--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
+    "local-start": "ng serve --host 0.0.0.0",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -26,6 +27,8 @@
     "@angular/platform-browser-dynamic": "^13.2.6",
     "@angular/router": "^13.2.6",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "@ng-web-apis/common": "^2.0.1",
+    "@ng-web-apis/geolocation": "^2.0.0",
     "@ngui/map": "0.30.3",
     "@popperjs/core": "^2.11.4",
     "@types/googlemaps": "3.39.14",
@@ -37,7 +40,7 @@
     "core-js": "3.21.1",
     "express": "4.18.0",
     "jquery": "3.5.1",
-    "moment": "2.29.1",
+    "moment": "^2.29.4",
     "ngx-toastr": "14.3.0",
     "rxjs": "^7.5.5",
     "zone.js": "~0.11.5"
@@ -47,12 +50,12 @@
     "@angular/cli": "^13.2.6",
     "@angular/compiler-cli": "^13.2.6",
     "@angular/language-service": "13.2.6",
+    "@types/chartist": "0.11.0",
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.10",
-    "@types/chartist": "0.11.0",
     "@types/jquery": "3.5.1",
     "@types/node": "16.3.2",
-    "codelyzer": "6.0.2",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~4.0.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.3.17",
