--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^13.2.6",
     "@angular/platform-browser-dynamic": "^13.2.6",
     "@angular/router": "^13.2.6",
+    "@mdi/svg": "^7.0.96",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
     "@ng-web-apis/common": "^2.0.1",
     "@ng-web-apis/geolocation": "^2.0.0",
