--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@angular/platform-browser": "^13.2.6",
     "@angular/platform-browser-dynamic": "^13.2.6",
     "@angular/router": "^13.2.6",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@mdi/svg": "^7.0.96",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
     "@ng-web-apis/common": "^2.0.1",
@@ -33,14 +37,18 @@
     "@ngui/map": "0.30.3",
     "@popperjs/core": "^2.11.4",
     "@types/googlemaps": "3.39.14",
+    "angular-datatables": "^15.0.0",
     "arrive": "2.4.1",
     "bootstrap": "^5.2.0",
     "bootstrap-notify": "3.1.3",
     "chart.js": "2.9.4",
     "chartist": "0.11.4",
     "core-js": "3.21.1",
+    "datatables.net": "^1.13.2",
+    "datatables.net-bs5": "^1.11.3",
+    "datatables.net-dt": "^1.13.2",
     "express": "4.18.0",
-    "jquery": "3.5.1",
+    "jquery": "^3.6.3",
     "moment": "^2.29.4",
     "ngx-toastr": "14.3.0",
     "rxjs": "^7.5.5",
@@ -53,11 +61,12 @@
     "@angular/compiler-cli": "^13.2.6",
     "@angular/language-service": "13.2.6",
     "@types/chartist": "0.11.0",
+    "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.10",
-    "@types/jquery": "3.5.1",
+    "@types/jquery": "^3.5.16",
     "@types/node": "16.3.2",
-    "codelyzer": "^6.0.2",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~4.0.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.3.17",
