--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-webpack": "^0.1501.6",
     "@angular/animations": "^13.2.6",
     "@angular/cdk": "^13.2.6",
     "@angular/common": "^13.2.6",
@@ -29,6 +30,7 @@
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@mdi/svg": "^7.0.96",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
