--- a/package.json
+++ b/package.json
@@ -14,23 +14,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-webpack": "^0.1501.6",
-    "@angular/animations": "^14.2.12",
+    "@angular/animations": "^13.2.6",
     "@angular/cdk": "^13.2.6",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/elements": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/localize": "^14.2.12",
+    "@angular/common": "^13.2.6",
+    "@angular/compiler": "^13.2.6",
+    "@angular/core": "^13.2.6",
+    "@angular/elements": "^13.2.6",
+    "@angular/forms": "^13.2.6",
+    "@angular/localize": "^13.2.6",
     "@angular/material": "^13.2.6",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
+    "@angular/platform-browser": "^13.2.6",
+    "@angular/platform-browser-dynamic": "^13.2.6",
+    "@angular/router": "^13.2.6",
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@mdi/svg": "^7.0.96",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
@@ -39,18 +37,15 @@
     "@ngui/map": "0.30.3",
     "@popperjs/core": "^2.11.4",
     "@types/googlemaps": "3.39.14",
-    "angular-datatables": "^15.0.0",
     "arrive": "2.4.1",
     "bootstrap": "^5.2.0",
     "bootstrap-notify": "3.1.3",
     "chart.js": "2.9.4",
     "chartist": "0.11.4",
     "core-js": "3.21.1",
-    "datatables.net": "^1.13.2",
-    "datatables.net-bs5": "^1.11.3",
-    "datatables.net-dt": "^1.13.2",
     "express": "4.18.0",
     "jquery": "^3.6.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "ngx-toastr": "14.3.0",
     "rxjs": "^7.5.5",
@@ -58,17 +53,16 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
-    "@angular/language-service": "14.2.12",
+    "@angular-devkit/build-angular": "^13.2.6",
+    "@angular/cli": "^13.2.6",
+    "@angular/compiler-cli": "^13.2.6",
+    "@angular/language-service": "13.2.6",
     "@types/chartist": "0.11.0",
-    "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.10",
     "@types/jquery": "^3.5.16",
     "@types/node": "16.3.2",
-    "codelyzer": "^0.0.28",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~4.0.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.3.17",
@@ -79,6 +73,6 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "7.0.0",
     "ts-node": "~10.7.0",
-    "typescript": "~4.8.4"
+    "typescript": "~4.4.2"
   }
 }
