--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jquery": "^3.6.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "ngx-filter-pipe": "^2.1.2",
     "ngx-toastr": "14.3.0",
     "rxjs": "^7.5.5",
     "ts-md5": "^1.3.1",
@@ -62,7 +63,7 @@
     "@types/jasminewd2": "~2.0.10",
     "@types/jquery": "^3.5.16",
     "@types/node": "16.3.2",
-    "codelyzer": "^6.0.2",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~4.0.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.3.17",
@@ -71,7 +72,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "~10.7.0",
     "typescript": "~4.4.2"
   }
